Fixed for firefox
Fixed Firefox not showing itemBoxes correctly.

--- a/style.css
+++ b/style.css
@@ -230,6 +230,7 @@ a:visited {
   color: aliceblue;
   text-align: center;
   align-items: flex-start;
+  height: fit-content;
 }
 
 .bodyBoxScroll {
